--- a/notebooks/hyperparam_search.ipynb
+++ b/notebooks/hyperparam_search.ipynb
@@ -130,8 +130,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Establecemos los parametros y valores a probar"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,6 +152,14 @@
     "        'learning_rate': [0.1, 0.15, 0.2, 0.3],\n",
     "        'n_estimators': [700, 800, 900, 1000]\n",
     "        }"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instanciamos el modelo"
    ]
   },
   {
@@ -166,6 +182,14 @@
     "from sklearn.model_selection import RandomizedSearchCV, GridSearchCV\n",
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.model_selection import StratifiedKFold"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilizamos la busqueda de hiperparamteros, utilizando 3-folds estratificados (presencia de clases) para evaluar el resultado segun la metrica AUC"
    ]
   },
   {
@@ -347,6 +371,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtenemos el mejor resultado"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
@@ -361,6 +393,14 @@
    ],
    "source": [
     "print(f\"Best score {random_search.best_score_}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Guardamos los hiperparametros"
    ]
   },
   {
